--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<% title(project.name, "Projects")  %>
+<% title(@project.name, "Projects")  %>
 
 <h1><%= @project.name %></h1>
 <p><%= @project.description %></p>
