--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="container">
 <%= flash.each do |key,message| %>
-  <div><%= message %></div>
+  <div class="alert alert-<%= key %>">
+    <%= message %>
+  </div>
 <% end %>
 
 <%= yield %>
+
+</div>
 
 </body>
 </html>
