--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,3 +10,12 @@
 </li>
 <%= link_to "New Ticket", new_project_ticket_path(@project) %>
 <p><%= @project.description %></p>
+
+<ul id="tickets">
+	<% @project.tickets.each do |ticket| %>
+	  <li>
+	  	#<%= ticket.id %> -
+	  	<%= link_to ticket.name, [@project, ticket] %>
+	  </li>
+	<% end %>
+</ul>
